many things commit

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,10 @@ server.port= 8080
 # Datasource
 spring.datasource.url=jdbc:h2:file:~/test
 spring.datasource.driver-class-name=org.h2.Driver
+server.servlet.context-path=/
+spring.thymeleaf.cache=false
+spring.thymeleaf.enabled=true
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+ 
+spring.application.name=Bootstrap Spring Boot
