--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port= 8080
-
+server.servlet.context-path=/
 # Datasource
 spring.datasource.url=jdbc:h2:file:~/test
 spring.datasource.driver-class-name=org.h2.Driver
